css + route synt change

--- a/views/create.html
+++ b/views/create.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>create</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <h2>CREATE A CAT YES</h2>
     
-    <form action="/cats" method="post">    
+    <form action="../index.php" method="post">
         <input type="text" name="catBreed" placeholder="cat breed?">
         <input type="text" name="catName" placeholder="cat name?">
         <input type="submit" value="create a car">
