--- a/views/update.html
+++ b/views/update.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>update</title>
+    <link rel="stylesheet" href="style.css">
 
     <script>
         function submitCats(){
@@ -30,6 +31,7 @@
     </script>
 </head>
 <body>
+    <h2>UPDATE INFO ABOUT THE CAT</h2>
     <form>
         <input id="id" type="text" name="id" placeholder="id?"/>
         <input id="name" type="text" name="catName" placeholder="change name?"/>
