--- a/views/contact.html
+++ b/views/contact.html
@@ -9,6 +9,9 @@
         h1, p, h6{
             color: #2a113d;
         }
+        h6{
+            font-size: larger;
+        }
         .contactBox{
             background: #a8a5c3;
         }
