--- a/views/update.html
+++ b/views/update.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>update</title>
-    <link rel="stylesheet" href="style.css">
+<!--    <link rel="stylesheet" href="/style.css"> -->
 
     <script>
-        function submitCats(){
+        async function submitChanges(){
             console.log("HELLOOO");
-            const id = document.querySelector("#id").value; 
-            const name = document.querySelector("#name").value; 
-            const breed = document.querySelector("#breed").value; 
+            const id = document.querySelector("#id").value;
+            const name = document.querySelector("#name").value;
+            const breed = document.querySelector("#breed").value;
 
             const data = new URLSearchParams();
             data.append('id', id);
             data.append('name', name);
             data.append('breed', breed);
 
-            fetch(`/GA/cats`, {method:"PATCH", body:data, headers:{"Content-type":"application/x-www-form-urlencoded"}, redirect:"manual"}).then((response) => {
-                const loco = response.headers.get("Loco");
-                window.location.replace(loco);
-                return response.json();
-            }).then((response) => {
-                console.log(response);
-            });
+            const response = await fetch(`/GA/cats`, {method:"PATCH", body:data, headers:{"Content-type":"application/x-www-form-urlencoded"}, redirect:"manual"});
+            const loco = response.headers.get("Loco");
+            console.log(loco);
+
+            const json = await response.text();
+            console.log(json);
+            window.location.href = loco;
         }
+
         // php vill inte ha in grejer i json utan i det som står i headers 
         // ?id=${id}&catName=${name}&catBreed=${breed} efter cats 
     </script>
@@ -36,7 +37,7 @@
         <input id="id" type="text" name="id" placeholder="id?"/>
         <input id="name" type="text" name="catName" placeholder="change name?"/>
         <input id="breed" type="text" name="catBreed" placeholder="change breed?"/>
-        <button onclick="submitCats()" type="button">update</button> <!-- form är gay och ändrar button utan type -->
+        <button onclick="submitChanges()" type="button">update</button> <!-- form är gay och ändrar button utan type -->
     </form>
 </body>
 </html>
