SQLite and route updates

--- a/views/create.html
+++ b/views/create.html
@@ -10,7 +10,7 @@
 
     <h2>CREATE A CAT YES</h2>
     
-    <form action="../index.php" method="post">
+    <form action="../cats" method="post">
         <input type="text" name="catBreed" placeholder="cat breed?">
         <input type="text" name="catName" placeholder="cat name?">
         <input type="submit" value="create a car">
