--- a/views/delete.html
+++ b/views/delete.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>delete</title>
-<!--    <link rel="stylesheet" href="style.css">-->
+    <link rel="stylesheet" href="../views/style.css">
 
     <script>
             async function submitRemoval(){
