--- a/views/contact.html
+++ b/views/contact.html
@@ -29,5 +29,8 @@
     <p>cam is actually content addressable memory, thank me later cisco baiter.</p>
 </div>
 
+<div class="imBox">
+    <img src="" alt="">
+</div>
 </body>
 </html>
