pug with styled

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -4,7 +4,8 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width-device-width, initial-scale=1.0")
         title Contact
-        link(rel="stylesheet", type="text/css", href="../views/style.css")
+        style
+            include style.css
         // script(src="routeFunction.js")
 
     body
@@ -14,14 +15,12 @@ html(lang="en")
         main
             h3 This is a beautiful cat.
 
-            .imgBox
-                img(src="./images/catupward.jpg", alt="picture of cat", style="width:100px;height:100px;")
-
+            .imgBoxt
+                img(src="./images/catupward.jpg", al="picture of cat", style="width:100px;height:100px;")
 
         footer
             p looking for the actual contacts huh?
             ul
                 li phon:0918797293
                 li emal: yirtpeezdd@hotmal.com
-
             p thak u so mach for visiteng!!
