--- a/views/main.pug
+++ b/views/main.pug
@@ -4,10 +4,10 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width-device-width, initial-scale=1.0")
         title Contact
-        link(rel="stylesheet", type="text/css", href="../views/style.css")
         script(src="./routeFunction.js")
-
-    body
+        style
+            include style.css
+    body(style="text-align:center;")
         header
             block titles
                 h1 WELCOME TO THE PAGE
@@ -15,6 +15,9 @@ html(lang="en")
                 a(href="./contact") contact
         main
             block content
+                p This is the very main page of the cat page.
+                .imgBox(style = "width:30vw;height:40vh;")
+                    img(src="./images/catchilling.jpg", alt = "the cat is chilling", style="width:100%;height:100%;display:block;")
 
         footer
             block feet
