pug with render create

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -16,7 +16,7 @@ html(lang="en")
             h3 This is a beautiful cat.
 
             .imgBoxt
-                img(src="./images/catupward.jpg", al="picture of cat", style="width:100px;height:100px;")
+                img(src="./images/catupward.jpg", alt="picture of cat", style="width:100px;height:100px;")
 
         footer
             p looking for the actual contacts huh?
