--- a/views/main.pug
+++ b/views/main.pug
@@ -12,6 +12,7 @@ html(lang="en")
             block titles
                 h1 WELCOME TO THE PAGE
                 a(href="./cats") cats
+                |
                 a(href="./contact") contact
         main
             block content
@@ -21,3 +22,5 @@ html(lang="en")
 
         footer
             block feet
+                h4 this is the bottom of the page of the cat page
+
