--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,11 +13,11 @@ html(lang="en")
             block titles
                 h1 This is the page
             nav
-                a(href="/") Home
+                a(href="./") Home
                 |
                 a(href="./cats/contact") Contact
                 |
-                a(href="/cats") Cats
+                a(href="./cats") Cats
 
         main
             block content
