--- a/views/style.css
+++ b/views/style.css
@@ -42,4 +42,4 @@ p, li{ color: var(--subtext1); font-family: nunitoFont, sans-serif; }
 a{ color: var(--subtext0); text-decoration: none; font-size: 1.7rem; }
 
 img{ width:100%; height:100%; display: block; border-radius: 10px; }
-.imgBox{ width:30vw; height:40vh; }
+.imgBox{ width:30vw; height:40vh; aspect-ratio: 1/1 }
