--- a/views/contact.pug
+++ b/views/contact.pug
@@ -2,6 +2,10 @@ extends ../views/layout.pug
 
 block titles
     h1 WELCOME TO THE CONTACT PAGE
+    nav
+        a(href="../") Home
+        |
+        a(href="../cats") Cats
 
 block content
     h3 This is a beautiful cat.
