--- a/views/create.pug
+++ b/views/create.pug
@@ -7,15 +7,15 @@ block content
     form(action="../cats", method="post")
         p cats name?
         |
-        input(type="text", name="catName", placeholder="cat name")
+        input(type="text", name="name", placeholder="cat name")
         |
         p cats breed?
         |
-        input(type="text", name="catBreed", placeholder="cat breed")
+        input(type="text", name="breed", placeholder="cat breed")
         |
         p add a picture?
         |
-        input(type="text", name="catPic", placeholder="img link")
+        input(type="text", name="img", placeholder="img link")
         |
         p all done?
         |
