--- a/views/main.pug
+++ b/views/main.pug
@@ -1,8 +1,11 @@
 extends ../views/layout.pug
 
-
 block titles
     h1 WELCOME TO THE PAGE
+    nav
+        a(href="./cats/contact") Contact
+        |
+        a(href="./cats") Cats
 
 block content
     p This is the very main page of the cat page.
