--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,12 +12,12 @@ html(lang="en")
         header
             block titles
                 h1 This is the page
-            nav
-                a(href="./") Home
-                |
-                a(href="./cats/contact") Contact
-                |
-                a(href="./cats") Cats
+                nav
+                    a(href="./") Home
+                    |
+                    a(href="./cats/contact") Contact
+                    |
+                    a(href="../cats") Cats
 
         main
             block content
