--- a/views/update.pug
+++ b/views/update.pug
@@ -21,7 +21,7 @@ block content
         |
         p change the image? otherwise leave blank.
         |
-        input( id="catPic", type="text", name="catPic", placeholder="update picture?" )
+        input( id="img", type="text", name="img", placeholder="update picture?" )
         |
         p done? click the button!
         |
