--- a/views/register.pug
+++ b/views/register.pug
@@ -6,10 +6,10 @@ block titles
 
 block content
     form(action="../cats", method="Post")
-        input(id="", name="username", type="text", placeholder="username?")
-        input(id="", name="email", type="text", placeholder="email?")
-        input(id="", name="password", type="password", placeholder="password?")
-        input(id="", type="submit", value="register")
+        input(id="usernam", name="username", type="text", placeholder="username?")
+        input(id="emal", name="email", type="text", placeholder="email?")
+        input(id="paswr", name="password", type="password", placeholder="password?")
+        input(type="submit", value="register")
 
 block feet
     h4 WE THANK YOU
