--- a/views/style.css
+++ b/views/style.css
@@ -43,3 +43,15 @@ a{ color: var(--subtext0); text-decoration: none; font-size: 1.7rem; }
 
 img{ width:100%; height:100%; display: block; border-radius: 10px; }
 .imgBox{ width:30vw; height:40vh; aspect-ratio: 1/1 }
+
+/* LAYOUT? / BASE */
+
+/* MAIN PAGE */
+
+/* CONTACT PAGE */
+
+/* CATS PAGE */
+
+/* CREATE PAGE */
+
+/* LOGIN / REGISTER PAGE */
